--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,8 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,700&display=swap");
-
+@import url("https://fonts.googleapis.com/css?family=Noto%20Sans%20Mono");
+@import url("https://fonts.googleapis.com/css?family=Open%20Sans");
 /* Variables */
 :root {
   --font-family: "Roboto", sans-serf;
+  --hero-body-font: "Open Sans";
+  --nav-link-font: "Noto Sans Mono";
   --normal-font: 400;
   --semibold-font: 520;
   --bold-font: 700;
@@ -36,9 +39,11 @@ ul {
 }
 
 .dot-points {
-  list-style-type: circle;
+  list-style-type: disc;
   position: relative;
   padding-left: 2rem;
+  margin: 10px;
+  margin-bottom: 5px;
 }
 
 a {
@@ -74,6 +79,7 @@ nav h1 {
 
 nav a {
   color: var(--primary-color);
+  font-family: var(--nav-link-font);
   transition: var(--transition);
 }
 nav a:hover {
@@ -89,6 +95,11 @@ nav ul {
 
 nav ul li {
   font-weight: var(--bold-font);
+}
+
+.name-heading {
+  font-family: "Open Sans";
+  font-weight: 700;
 }
 
 .burger-menu {
@@ -111,10 +122,9 @@ nav ul li {
 }
 
 .hero img {
-  height: 22.5rem;
-  width: 40rem;
+  height: 30rem;
+  width: 30rem;
   border-radius: 6px;
-  box-shadow: 0px 2px 15px 2px var(--primary-shadow);
 }
 
 .bio {
@@ -122,6 +132,7 @@ nav ul li {
   padding: 0.625rem;
   border-radius: 6px;
   background-color: white;
+  font-family: var(--hero-body-font);
   box-shadow: 0px 2px 15px 2px var(--primary-shadow);
 }
 
@@ -132,4 +143,13 @@ nav ul li {
 .bio p {
   line-height: var(--line-height);
   padding: 0.3rem 0;
+}
+
+.org-link {
+  font-weight: var(--bold-font);
+  color: var(--primary-color);
+  font-style: under;
+}
+.org-link:hover {
+  color: rgb(0, 128, 255);
 }
