--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -70,7 +70,6 @@ nav {
   justify-content: space-between;
   padding: 1.5rem 3.5rem;
   background-color: var(--nav-bg-color);
-  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
 }
 
 nav h1 {
@@ -142,12 +141,40 @@ msg {
   font-family: var(--nav-link-font);
 }
 
+
+
+.hero-social-links {
+  display: flex;
+  gap: 1rem;
+  padding-top: 10px;
+  animation: fadeIn 3s ease-out;
+}
+
+.wave-animation {
+  max-width: 2rem;
+  max-height: 2rem;
+}
+
+.hero .profession-emojis {
+  max-width: 1.75rem;
+  max-height: 1.75rem;
+  bottom: 0;
+}
+
 .fade-text-from-left {
   position: relative;
   white-space: nowrap;
   animation: fadeIn 6s ease-out, example 3s forwards;
   font-family: var(--nav-link-font);
+}
 
+.fade-text-from-left h3 {
+  font-size: 15px;
+  white-space: nowrap;
+}
+
+.fade-text-from-left msg {
+  font-size: 20px;
 }
 
 .fade-text-from-left p {
