--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -349,3 +349,23 @@ msg {
 .contact img:hover {
   transform: scale(1.1)
 }
+
+#returnToTop {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 6vh; /* Place the button at the bottom of the page */
+  right: 7vh; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  height: 7vh;
+  width: 7vh;
+  background-color: none;
+}
+
+#returnToTop:hover {
+  background-color: white; /* Add a dark-grey background on hover */
+  border-radius: 50%;
+  transform:  scale(1.1);
+} 
