--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -102,7 +102,8 @@ nav h1 {
 }
 
 nav a {
-  color: black;
+  color: var(--primary-color);
+
   font-family: var(--typewriter-font);
   font-size: 20px;
   transition: var(--transition);
@@ -118,7 +119,6 @@ nav ul {
   position: relative;
   gap: 3rem;
   font-weight: var(--typewriter-font);
-
 }
 
 /* nav ul li {
@@ -155,7 +155,7 @@ msg {
   color:black;
 }
 
-@media (max-width: 800px) {
+@media screen and (max-width: 720px) {
   .hero {
     flex-direction: column;
   }
@@ -173,6 +173,30 @@ msg {
   }
   .contact-social-links { 
     flex-direction: column;
+  }
+  nav {
+    padding: 1.5rem 1rem;
+  }
+  nav ul {
+    position: fixed;
+    background-color: var(--bg-color);
+    flex-direction: column;
+    top: 86px;
+    left: 10%;
+    width: 80%;
+    text-align: center;
+    transform: translateX(120%);
+    transition: transform 0.5s ease-in;
+  }
+
+   nav ul li {
+    margin: 8px;
+  }
+  .burger-menu {
+    display: block;
+  }
+  nav ul.show {
+    transform: translateX(0);
   }
 }
 
@@ -287,7 +311,7 @@ msg {
 
 .bio {
   padding: 0.625rem;
-  /* border-radius: 6px; */
+  border-radius: 6px;
   background-color: white;
   font-family: var(--normal-body-font);
   box-shadow: 0px 10px 15px 2px var(--primary-shadow);
