trimmed waves + added cirlce crosshair

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -30,6 +30,8 @@
 
 html {
   scroll-behavior: smooth;
+  cursor: none;
+
 }
 
 @-moz-document url-prefix() { /* Disable scrollbar Firefox */
@@ -46,6 +48,24 @@ body {
 body::-webkit-scrollbar {
   width: 0px;
   background: transparent; /* Disable scrollbar Chrome/Safari/Webkit */
+}
+
+#wrapper {
+  position: relative;
+  width: 70%;
+  height: 80%;
+}
+
+#circle {
+  position: fixed;
+  z-index: 5;
+  width: 25px;
+  height: 25px;
+  background-color: var(--bg-secondary-color);
+  border-radius: 50%;
+  pointer-events: none;
+  transition: background ease-in 10ms, box-shadow ease-in 150ms, transform ease-in 150ms;
+  transform: translate3d(0, 0, 0);
 }
 
 /* CSS Resets */
@@ -78,7 +98,8 @@ a:hover {
 
 body {
   font-family: var(--font-family);
-  background: linear-gradient(225deg, rgba(81,105,179,1) 0%, rgba(118,82,170,1) 33%, rgba(192,67,166,1) 94%); 
+  /* background: linear-gradient(225deg, rgba(81,105,179,1) 0%, rgba(118,82,170,1) 33%, rgba(192,67,166,1) 94%);  */
+  background-color: #7652aa;
 }
 
 .about section {
@@ -95,7 +116,7 @@ nav {
   justify-content: space-between;
   padding: 1.5rem 3.5rem;
   background-color: var(--nav-bg-color);
-  border-bottom: 1px solid rgba(136, 136, 136, 0.212);
+  /* border-bottom: 1px solid rgba(136, 136, 136, 0.212); */
 }
 
 nav h1 {
@@ -145,7 +166,7 @@ msg {
 }
 
 .spacer {
-    aspect-ratio: 1080/300;
+    aspect-ratio: 1080/130;
     width: 100%;
     background-repeat: no-repeat;
     background-position: center;
@@ -153,7 +174,7 @@ msg {
 }
 
 .layer1 {
-  background-image: url('../images/layered-waves-haikei(4).svg');
+  background-image: url('../images/layered-waves-haikei(4) 2.svg');
 }
 
 .hero {
@@ -201,7 +222,7 @@ msg {
 .more-about {
   background-color: var(--about-bg-color);
   color: white;
-  padding: 3rem 6rem;
+  padding: 0 3rem 6rem;
 }
 
 .more-about h2 {
@@ -249,6 +270,11 @@ msg {
 
 
 @media screen and (min-width: 1000px) {
+
+  .hero {
+    padding-top: 80px;
+    padding-bottom: 80px;
+  }
   .hero h1 {
     font-size: 8vh;
   }
@@ -256,6 +282,7 @@ msg {
   .hero-p {
     font-size: 2vh;
   }
+
 
   .hero-social-icons {
     height: 30px;
