added cursor change

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -60,9 +60,9 @@ body::-webkit-scrollbar {
 
 #circle {
   position: fixed;
-  z-index: 5;
-  width: 25px;
-  height: 25px;
+  z-index: 100;
+  width: 20px;
+  height: 20px;
   background-color: var(--bg-secondary-color);
   box-shadow: 0 0 0 1px rgba(136, 136, 136, 0.918);
   border-radius: 50%;
@@ -146,6 +146,7 @@ nav a {
 
 nav a:hover {
   color: var(--medium-highlight);
+  cursor: none;
   /* border-bottom: 2px solid var(--medium-highlight); */
 }
 
@@ -503,6 +504,8 @@ msg {
 .hero-social-icons:hover {
   /* opacity: 1; */
   transform: scale(1.05);
+  cursor: none;
+
 }
 
 .hero div {
@@ -639,6 +642,8 @@ msg {
   transform: scale(1.1);
   background-color: white; /* Add a dark-grey background on hover */
   border-radius: 50%;
+  cursor: none;
+
 }
 
 
@@ -659,6 +664,6 @@ msg {
 }
 
 #returnToTop:hover {
-
+  cursor: none;
   transform:  scale(1.1);
 } 
