--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -102,7 +102,9 @@ a:hover {
 body {
   font-family: var(--font-family);
   /* background: linear-gradient(225deg, rgba(81,105,179,1) 0%, rgba(118,82,170,1) 33%, rgba(192,67,166,1) 94%);  */
-  background-color: #7652aa;
+  /* background-color: #7652aa; */
+  background: rgb(78,214,187);
+  background: linear-gradient(180deg, rgba(78,214,187,1) 0%, rgba(82,143,170,1) 10%, rgba(118,82,170,1) 21%); 
 }
 
 .about section {
@@ -113,10 +115,13 @@ body {
   max-width: 50px;
   max-height: 50px;
   transition: transform 0.3s;
+  filter: invert(100%);
+  
 }
 
 .nav-logo:hover {
   transform: scale(1.1);
+
 }
 
 nav {
@@ -128,8 +133,11 @@ nav {
   align-items: center;
   justify-content: space-between;
   padding: 1.5rem 3.5rem;
-  background-color: var(--nav-bg-color);
-  /* border-bottom: 1px solid rgba(136, 136, 136, 0.212); */
+  /* background-color: var(--nav-bg-color); */
+  /* background-color: rgba(0, 0, 0, 0.075); */
+  box-shadow: 10px 10px 5px rgba(2, 2, 2, 0.041);
+  backdrop-filter: blur(4px);
+  border-bottom: 1.5px solid rgba(255, 255, 255, 0.5);
 }
 
 nav h1 {
@@ -137,7 +145,7 @@ nav h1 {
 }
 
 nav a {
-  color: black;
+  color: white;
 
   font-family: var(--typewriter-font);
   font-size: 20px;
@@ -167,7 +175,8 @@ nav ul {
 }
 
 .burger-menu {
-  color: var(--primary-color);
+  /* color: var(--primary-color); */
+  color: white;
   font-size: 2rem;
   border: 0;
   background-color: transparent;
