--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -61,8 +61,8 @@ body::-webkit-scrollbar {
 #circle {
   position: fixed;
   z-index: 100;
-  width: 20px;
-  height: 20px;
+  width: 15px;
+  height: 15px;
   background-color: var(--bg-secondary-color);
   box-shadow: 0 0 0 1px rgba(136, 136, 136, 0.918);
   border-radius: 50%;
@@ -70,6 +70,25 @@ body::-webkit-scrollbar {
   transition: background ease-in 10ms, box-shadow ease-in 150ms, transform ease-in 150ms;
   transform: translate3d(0, 0, 0);
 }
+
+#returnToTop {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 10vh; /* Place the button at the bottom of the page */
+  right: 7vh; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  height: 7vh;
+  width: 7vh;
+}
+
+#returnToTop:hover {
+  cursor: none;
+  transform:  scale(1.1);
+} 
+
 
 /* CSS Resets */
 * {
@@ -496,6 +515,10 @@ msg {
     max-width: 100vw;
   }
 
+  #returnToTop {
+    right: 2vh;
+  }
+
 }
 
 @media screen and (max-width: 450px) {
@@ -687,22 +710,3 @@ msg {
 
 
 
-#returnToTop {
-  display: none; /* Hidden by default */
-  position: fixed; /* Fixed/sticky position */
-  bottom: 6vh; /* Place the button at the bottom of the page */
-  right: 7vh; /* Place the button 30px from the right */
-  z-index: 99; /* Make sure it does not overlap */
-  border: none; /* Remove borders */
-  outline: none; /* Remove outline */
-  cursor: pointer; /* Add a mouse pointer on hover */
-  height: 7vh;
-  width: 7vh;
-  background-color: white; /* Add a dark-grey background on hover */
-  border-radius: 50%;
-}
-
-#returnToTop:hover {
-  cursor: none;
-  transform:  scale(1.1);
-} 
