--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,7 +17,7 @@
   --bg-footer-color:#7480be;
   --highlight-color: #B9FAF8;
   --about-bg-color: #001122;
-  --nav-bg-color: white;
+  ---bg-color: white;
   --primary-color: #4756df;
   --secondary-color: #A663CC;
   --medium-highlight: #39bbdf;
@@ -143,7 +143,7 @@ body {
   max-height: 50px;
   transition: transform 0.3s;
   filter: invert(100%);
-  
+  animation: fadeIn 1s ease-out;
 }
 
 .nav-logo:hover {
@@ -165,6 +165,7 @@ nav {
   box-shadow: 10px 10px 5px rgba(2, 2, 2, 0.041);
   backdrop-filter: blur(4px);
   border-bottom: 1px solid rgba(255, 255, 255, 0.308);
+
 }
 
 nav h1 {
@@ -173,7 +174,6 @@ nav h1 {
 
 nav a {
   color: white;
-
   font-family: var(--typewriter-font);
   font-size: 20px;
 }
@@ -189,6 +189,8 @@ nav ul {
 .nav-link {
   list-style-type: none;
   position: relative;
+  animation: nav-links 0.6s forwards;
+
 }
 
 
@@ -209,6 +211,11 @@ nav ul {
   cursor: none;
   width: 100%;
   left: 0%;
+}
+
+@keyframes nav-links {
+  from { top: -10vh; }
+  to { top: 0vh; }
 }
 
 
@@ -342,7 +349,7 @@ msg {
 .fade-text-from-left {
   position: relative;
   white-space: nowrap;
-  animation: fadeIn 6s ease-out, example 3s forwards;
+  animation: fadeIn 3s ease-out, example 3s forwards;
   font-family: var(--typewriter-font);
 }
 
@@ -490,29 +497,39 @@ msg {
   nav {
     padding: 1.5rem 1rem;
   }
+
   nav ul {
     position: fixed;
-    background-color: var(--bg-color);
+    background-color: rgba(56, 56, 56, 0.568);
+    backdrop-filter: blur(4px);
+
     flex-direction: column;
-    top: 88px;
-    left: 10%;
-    width: 80%;
+    top: 12px;
+    right: 12px;
+    padding-top: 20px;
+    padding-bottom: 15px;
+    width: 40%;
     text-align: center;
     transform: translateX(120%);
-    transition: transform 0.5s ease-in;
+    border-radius: 10px 5px 10px 5px;
   }
 
-   nav ul li {
-    margin: 8px;
-    border: 2px solid rgba(92, 88, 88, 0.267);
+  nav a {
+    color: white;
+    font-size: 17.5px;
+  }
+  
+  nav ul li {
     border-left: none;
     border-right: none;
   }
   .burger-menu {
     display: block;
   }
+  
   nav ul.show {
     transform: translateX(0);
+    transition: 0.2s;
   }
 
   .bookshelf-bg {
