made nav bar lighter

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -161,7 +161,7 @@ nav {
   justify-content: space-between;
   padding: 1.5rem 3.5rem;
   /* background-color: var(--nav-bg-color); */
-  /* background-color: rgba(0, 0, 0, 0.075); */
+  background-color: rgba(238, 238, 238, 0.08);
   box-shadow: 10px 10px 5px rgba(2, 2, 2, 0.041);
   backdrop-filter: blur(4px);
   border-bottom: 1px solid rgba(255, 255, 255, 0.308);
@@ -587,6 +587,8 @@ msg {
 .hero-social-icons:hover {
   /* opacity: 1; */
   transform: scale(1.05);
+  /* filter: hue-rotate(108deg);
+  -webkit-filter: hue-rotate(180deg); */
   cursor: none;
 
 }
