--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -543,6 +543,11 @@ msg {
   line-height: var(--line-height);
 }
 
+.logo-section {
+  display: flex;
+  flex-direction: row;
+}
+
 .about-org-logos {
   display: flex;
   flex-direction: column;
@@ -556,9 +561,24 @@ msg {
   width: 85px;  
 }
 
+.about-org-logos-2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+
+}
+
+.about-org-logos-2 img {
+  height: 85px;
+  width: 85px;  
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+/* 
 .about-pic {
   padding-left: 3vw;
-}
+} */
 
 .org-link {
   font-weight: var(--bold-font);
@@ -735,6 +755,10 @@ msg {
     text-align: left;
   }
 
+  .logo-section {
+    justify-content: center;
+  }
+
   .about-org-logos {
     flex-direction: row;
 
@@ -746,8 +770,29 @@ msg {
   .about-org-logos img {
     height: 70px;
     width: 70px;
+    margin-right: 5px;
+    margin-left: 5px;
   
   }
+
+  .about-org-logos-2 {
+    flex-direction: row;
+    
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  
+  
+  .about-org-logos-2 img {
+    height: 70px;
+    width: 70px;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-right: 5px;
+    margin-left: 5px;
+  
+  }
+
 
   .org-link {
     font-size: 17px;
